# llm-eval

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: design.md  requirements.txt
examples/: quickstart.py  research_kb_eval.py  sample_results.json
notebooks/: 01_judge_calibration.ipynb  04_cost_asymmetric_verifier.ipynb
scripts/: convert_golden.py
src/ir_eval/: __init__.py  adapter.py  compare.py  runner.py  types.py
src/ir_eval/cli/: __init__.py  main.py
src/ir_eval/drift/: alerts.py  baseline.py  detector.py
src/ir_eval/reporters/: console.py  json_reporter.py  markdown.py
src/ir_eval_research_kb/: __init__.py  adapter.py
src/llm_eval/: __init__.py  calibration.py  cost_asymmetric.py
tests/: conftest.py  test_agreement_metrics.py  test_cli.py  test_confidence.py  test_drift_detector.py  test_ranking_metrics.py  test_reporters.py  test_runner.py  test_types.py
tests/fixtures/: golden_research_kb_full.json
